--- a/Project/SecurityMaster/SecurityMaster/SecMaster_DAL.csproj
+++ b/Project/SecurityMaster/SecurityMaster/SecMaster_DAL.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A2758E16-1CF8-4D34-B3DB-4EB54577187A}</ProjectGuid>
+    <ProjectGuid>{6C6B6B32-4533-4B5C-ADD8-B6FED3D403BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL_DataModel</RootNamespace>
-    <AssemblyName>DAL_DataModel</AssemblyName>
+    <RootNamespace>SecurityMaster</RootNamespace>
+    <AssemblyName>SecurityMaster</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
