--- a/Project/SecurityMaster/SecurityMaster/SecMaster_DAL.csproj
+++ b/Project/SecurityMaster/SecurityMaster/SecMaster_DAL.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{6C6B6B32-4533-4B5C-ADD8-B6FED3D403BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SecurityMaster</RootNamespace>
+    <RootNamespace>SecMaster_DAL</RootNamespace>
     <AssemblyName>SecurityMaster</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
