--- a/Project/SecurityMaster/SecurityMaster/SecMaster_DAL.csproj
+++ b/Project/SecurityMaster/SecurityMaster/SecMaster_DAL.csproj
@@ -41,8 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CorporateBond.cs" />
+    <Compile Include="DataAccessLibrary.cs" />
     <Compile Include="Equity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
