File Corruptions in DAL removed.

--- a/Project/SecurityMaster/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/Project/SecurityMaster/ConsoleApplication1/ConsoleApplication1.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SecMaster_DAL">
+      <HintPath>..\SecMaster_DAL\bin\Debug\SecMaster_DAL.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,12 +48,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SecurityMaster\SecMaster_DAL.csproj">
-      <Project>{6C6B6B32-4533-4B5C-ADD8-B6FED3D403BA}</Project>
-      <Name>SecMaster_DAL</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
