--- a/Project/SecurityMaster/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/Project/SecurityMaster/ConsoleApplication1/ConsoleApplication1.csproj
@@ -49,6 +49,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SecurityReader\SecurityReader.csproj">
+      <Project>{e22263d2-bed8-40bd-9aca-1bcd3838ba67}</Project>
+      <Name>SecurityReader</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
